--- a/less/creative.less
+++ b/less/creative.less
@@ -303,7 +303,8 @@ header {
 
 // Bootstrap Overrides
 .text-primary {
-    color: @theme-primary;
+    // color: @theme-primary;
+    color: @cw-fuchsia;
 }
 
 .no-gutter > [class*='col-'] {
