--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,10 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #F05F40;
+@cw-blue: #446CB3;
+@cw-fuchsia: #F62459;
+// @theme-primary:    #F05F40;
+@theme-primary:    @cw-blue;
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
